#11530 [폼디자인] Input box 컴포넌트 수정불가 일때 내용이 너무 많으면 내용을 확인 할 수 없다.

--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -1948,6 +1948,10 @@ select {
   pointer-events: none;
   cursor: default;
 }
+.z-select .z-select-box.disabled-select .z-select-box-label {
+  color: #ABB0B5;
+  background-color: #EEEEEE;
+}
 .z-select .z-select-options {
   display: none;
   list-style: none;
