--- a/src/main/resources/public/scss/template/_text-editor.scss
+++ b/src/main/resources/public/scss/template/_text-editor.scss
@@ -280,7 +280,7 @@
       color: $element-font-color;
       @include border($element-border-width, solid, $element-border-color, all);
       .ql-editor {
-        height: 7.5rem; // 120px
+        min-height: 7.5rem; // 120px
         padding: 0.625rem; // 10px
         // 내부 태그 재정의
         .ql-blank::before {
