--- a/src/main/resources/public/template/board/boardArticlesSearch.html
+++ b/src/main/resources/public/template/board/boardArticlesSearch.html
@@ -17,7 +17,7 @@
             <option th:each="boardAdmin: ${boardAdminList}" th:value="${boardAdmin.boardAdminId}"
                     th:text="#{${boardAdmin.boardAdminTitle}}"></option>
         </select>
-        <input type="text" class="z-input i-search col-3" id="searchValue" name="searchValue" maxlength="100"
+        <input type="text" class="z-input i-search text-ellipsis col-3" id="searchValue" name="searchValue" maxlength="100"
                th:placeholder="#{board.label.searchBoardPlaceholder}"/>
         <input type="text" class="z-input i-date-picker search-date col-3" id="fromDt" name="fromDt"/>
         <span>~</span>
@@ -116,7 +116,9 @@
      */
     function setDateTimeFormat(elem) {
         elem.querySelectorAll('.date-time').forEach(dt => {
-            dt.textContent = i18n.userDateTime(dt.textContent.trim());
+            const userDateTime = i18n.userDateTime(dt.textContent.trim());
+            dt.textContent = userDateTime;
+            dt.setAttribute('title', userDateTime);
         });
     }
     /* ]]> */
