--- a/src/main/resources/public/template/download/downloadList.html
+++ b/src/main/resources/public/template/download/downloadList.html
@@ -21,18 +21,18 @@
             <td style="width:100%" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
         </tr>
         <tr class="flex-row align-items-center" th:each="download : ${downloadList}">
-            <td style="width:5%;" class="align-center" th:text="|${download.downloadSeq}|"></td>
-            <td style="width:10%;" class="align-center" th:text="${download.downloadCategoryName}"></td>
+            <td style="width:5%;" class="align-center" th:text="|${download.downloadSeq}|" th:title="|${download.downloadSeq}|"></td>
+            <td style="width:10%;" class="align-center" th:text="${download.downloadCategoryName}" th:title="${download.downloadCategoryName}"></td>
             <td style="width:45%;" class="align-left underline">
                 <a sec:authorize="!hasAuthority('download.update')" th:text="${download.downloadTitle}"
-                   th:href="@{/downloads/{id}/view(id=${download.downloadId})}">
+                   th:href="@{/downloads/{id}/view(id=${download.downloadId})}" th:title="${download.downloadTitle}">
                 </a>
                 <a sec:authorize="hasAuthority('download.update')" th:text="${download.downloadTitle}"
-                   th:href="@{/downloads/{id}/edit(id=${download.downloadId})}"></a>
+                   th:href="@{/downloads/{id}/edit(id=${download.downloadId})}" th:title="${download.downloadTitle}"></a>
             </td>
-            <td style="width:10%;" class="align-center" th:text="${download.views}"></td>
-            <td style="width:10%;" class="align-center" th:text="${download.createUserName}"></td>
-            <td style="width:20%;" class="align-center date-time" name="createDt" th:text="${download.createDt}"></td>
+            <td style="width:10%;" class="align-center" th:text="${download.views}" th:title="${download.views}"></td>
+            <td style="width:10%;" class="align-center" th:text="${download.createUserName}" th:title="${download.createUserName}"></td>
+            <td style="width:20%;" class="align-center date-time" name="createDt" th:text="${download.createDt}" th:title="${download.createDt}"></td>
         </tr>
     </tbody>
 </table>
