--- a/src/main/resources/public/template/numbering-pattern/numberingPatternList.html
+++ b/src/main/resources/public/template/numbering-pattern/numberingPatternList.html
@@ -17,12 +17,12 @@
     <tr class="flex-row align-items-center" th:each="pattern : ${patternList}">
         <td style="width:25%;" class="align-left underline" th:id="${pattern.patternId}">
             <a sec:authorize="!hasAuthority('numbering.pattern.update')" th:text="${pattern.patternName}"
-               th:href="@{/numberingPatterns/{id}/view(id=${pattern.patternId})}"></a>
+               th:href="@{/numberingPatterns/{id}/view(id=${pattern.patternId})}" th:title="${pattern.patternName}"></a>
             <a sec:authorize="hasAuthority('numbering.pattern.update')" th:text="${pattern.patternName}"
-               th:href="@{/numberingPatterns/{id}/edit(id=${pattern.patternId})}"></a>
+               th:href="@{/numberingPatterns/{id}/edit(id=${pattern.patternId})}" th:title="${pattern.patternName}"></a>
         </td>
-        <td style="width:25%;" class="align-left" id="patternType" th:text="${pattern.patternType}"></td>
-        <td style="width:50%;" class="align-left" id="patternValue" th:text="${pattern.patternValue}"></td>
+        <td style="width:25%;" class="align-left" id="patternType" th:text="${pattern.patternType}" th:title="${pattern.patternType}"></td>
+        <td style="width:50%;" class="align-left" id="patternValue" th:text="${pattern.patternValue}" th:title="${pattern.patternValue}"></td>
     </tr>
     </tbody>
 </table>
