--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -2268,6 +2268,10 @@ select {
   pointer-events: none;
   cursor: default;
 }
+.z-select .z-select-box.disabled-select .z-select-box-label {
+  color: #ABB0B5;
+  background-color: #EEEEEE;
+}
 .z-select .z-select-options {
   display: none;
   list-style: none;
@@ -5023,7 +5027,7 @@ select {
   border: 0.0625rem solid #ABB0B5;
 }
 .ql-wrapper-container .ql-container.ql-snow .ql-editor {
-  height: 7.5rem;
+  min-height: 7.5rem;
   padding: 0.625rem;
 }
 .ql-wrapper-container .ql-container.ql-snow .ql-editor .ql-blank::before {
