--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1603,6 +1603,10 @@ select {
   pointer-events: none;
   cursor: default;
 }
+.z-select .z-select-box.disabled-select .z-select-box-label {
+  color: #ABB0B5;
+  background-color: #EEEEEE;
+}
 .z-select .z-select-options {
   display: none;
   list-style: none;
@@ -5465,7 +5469,7 @@ select {
   border: 0.0625rem solid #ABB0B5;
 }
 .ql-wrapper-container .ql-container.ql-snow .ql-editor {
-  height: 7.5rem;
+  min-height: 7.5rem;
   padding: 0.625rem;
 }
 .ql-wrapper-container .ql-container.ql-snow .ql-editor .ql-blank::before {
@@ -6120,6 +6124,9 @@ body.modal-active {
 }
 .modal-dialog.document-display .modal-content .document-display-content .z-table .z-table-body {
   border: none;
+}
+.modal-dialog.document-display .modal-content .document-display-content .z-table .z-table-body tr:hover {
+  background-color: transparent;
 }
 .modal-dialog.document-display .modal-content .document-display-content .z-table th, .modal-dialog.document-display .modal-content .document-display-content .z-table td {
   padding: 0 1.5rem 0.625rem 0;
