--- a/src/main/resources/public/template/board/board.html
+++ b/src/main/resources/public/template/board/board.html
@@ -16,7 +16,7 @@
         <label for="boardAdminTitle">
             <span th:classappend="${view} ? '' : 'required'" th:text="#{board.label.name}"></span>
         </label>
-        <input class="z-input" id="boardAdminTitle" maxlength="70" required="required"
+        <input class="z-input text-ellipsis" id="boardAdminTitle" maxlength="70" required="required"
                th:readonly="${view}" th:value="${boardAdmin?.boardAdminTitle}" type="text"/>
     </div>
     <div class="flex-column z-edit-row">
@@ -29,7 +29,7 @@
     </div>
     <div class="flex-column z-edit-row">
         <label for="boardAdminSort" th:text="#{board.label.order}"></label>
-        <input class="z-input col-6" id="boardAdminSort" maxlength="2" name="boardAdminSort"
+        <input class="z-input text-ellipsis col-6" id="boardAdminSort" maxlength="2" name="boardAdminSort"
                th:onKeyup="${view} ? '' : 'this.value=this.value.replace(/[^0-9]/g,\'\');'" th:readonly="${view}"
                th:value="${boardAdmin?.boardAdminSort}" type="text"/>
     </div>
@@ -68,11 +68,11 @@
                     <label for="boardCategoryName">
                         <span th:classappend="${view} ? 'readonly' : ''" th:text="#{board.label.categoryName}"></span>
                     </label>
-                    <input class="z-input" id="boardCategoryName" maxlength="100" required="required" th:readonly="${view}" type="text"/>
+                    <input class="z-input text-ellipsis" id="boardCategoryName" maxlength="100" required="required" th:readonly="${view}" type="text"/>
                 </div>
                 <div class="flex-column col-5 mr-2">
                     <label for="boardCategorySort" th:text="#{board.label.order}"></label>
-                    <input class="z-input" id="boardCategorySort" maxlength="2" th:onKeyup="${view} ? '' : 'this.value=this.value.replace(/[^0-9]/g,\'\');'"
+                    <input class="z-input text-ellipsis" id="boardCategorySort" maxlength="2" th:onKeyup="${view} ? '' : 'this.value=this.value.replace(/[^0-9]/g,\'\');'"
                            th:readonly="${view}" type="text"/>
                 </div>
                 <div class="flex-column justify-content-end col-1">
