--- a/src/main/resources/public/template/chart/chartList.html
+++ b/src/main/resources/public/template/chart/chartList.html
@@ -23,22 +23,22 @@
         <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(chartList)}" th:each="chart: ${chartList}">
             <td style="width: 20%;" class="align-left underline pointer">
                 <a sec:authorize="hasAuthority('chart.update')" th:text="${chart.chartName}"
-                   th:href="@{/charts/{id}/edit(id=${chart?.chartId})}">
+                   th:href="@{/charts/{id}/edit(id=${chart?.chartId})}" th:title="${chart.chartName}">
                 </a>
                 <a sec:authorize="!hasAuthority('chart.update')" th:text="${chart.chartName}"
-                   th:href="@{/charts/{id}/view(id=${chart?.chartId})}">
+                   th:href="@{/charts/{id}/view(id=${chart?.chartId})}" th:title="${chart.chartName}">
                 </a>
             </td>
-            <td style="width: 20%;" class="align-left" th:text="#{|chart.${chart.chartType}|}"></td>
-            <td style="width: 25%;" class="align-left" th:text="${chart.chartDesc}"></td>
+            <td style="width: 20%;" class="align-left" th:text="#{|chart.${chart.chartType}|}" th:title="#{|chart.${chart.chartType}|}"></td>
+            <td style="width: 25%;" class="align-left" th:text="${chart.chartDesc}" th:title="${chart.chartDesc}"></td>
             <td style="width: 10%;" class="align-center">
                 <button type="button" class="z-button-icon form"
                         th:onclick="openChartViewModal([[${chart.chartId}]], [[${chart.chartType}]], [[${chart.chartName}]])">
                     <span class="z-icon i-popup"></span>
                 </button>
             </td>
-            <td style="width: 10%;" class="align-left" th:text="${chart.createUserName}"></td>
-            <td style="width: 15%;" class="align-left date-time" th:text="${chart.createDt}"></td>
+            <td style="width: 10%;" class="align-left" th:text="${chart.createUserName}" th:title="${chart.createUserName}"></td>
+            <td style="width: 15%;" class="align-left date-time" th:text="${chart.createDt}" th:title="${chart.createDt}"></td>
         </tr>
     </tbody>
 </table>
