--- a/src/main/resources/public/template/cmdb/attribute/attributeList.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeList.html
@@ -21,13 +21,13 @@
         <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(attributeList)}" th:each="attribute: ${attributeList}">
             <td style="width: 25%" class="align-left underline">
                 <a sec:authorize="hasAuthority('cmdb.attribute.create') || hasAuthority('cmdb.attribute.update')" th:text="${attribute.attributeName}"
-                   th:href="@{/cmdb/attributes/{id}/edit(id=${attribute.attributeId})}"></a>
+                   th:href="@{/cmdb/attributes/{id}/edit(id=${attribute.attributeId})}" th:title="${attribute.attributeName}"></a>
                 <a sec:authorize="!hasAuthority('cmdb.attribute.create') && !hasAuthority('cmdb.attribute.update')" th:text="${attribute.attributeName}"
-                   th:href="@{/cmdb/attributes/{id}/view(id=${attribute.attributeId})}"></a>
+                   th:href="@{/cmdb/attributes/{id}/view(id=${attribute.attributeId})}" th:title="${attribute.attributeName}"></a>
             </td>
-            <td style="width: 25%" class="align-left" th:text="${attribute.attributeText}"></td>
-            <td style="width: 20%" class="align-center" th:text="${attribute.attributeType}"></td>
-            <td style="width: 30%" class="align-left" th:text="${attribute.attributeDesc}"></td>
+            <td style="width: 25%" class="align-left" th:text="${attribute.attributeText}" th:title="${attribute.attributeText}"></td>
+            <td style="width: 20%" class="align-center" th:text="${attribute.attributeType}" th:title="${attribute.attributeType}"></td>
+            <td style="width: 30%" class="align-left" th:text="${attribute.attributeDesc}" th:title="${attribute.attributeDesc}"></td>
         </tr>
     </tbody>
 </table>
