--- a/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
@@ -17,7 +17,7 @@
     <input type="hidden" sec:authorize="!hasAuthority('cmdb.attribute.create') && !hasAuthority('cmdb.attribute.update')" th:name="isRole"
            th:value="false"/>
     <form id="searchFrm">
-        <input class="z-input i-search col-5 mr-2" id="searchValue" name="searchValue" type="text" maxlength="100"
+        <input class="z-input i-search text-ellipsis col-5 mr-2" id="searchValue" name="searchValue" type="text" maxlength="100"
                th:placeholder="#{cmdb.attribute.label.searchPlaceholder}"/>
         <th:block th:replace="layout/itsm/fragment/totalCountFragment :: totalCountFragment"></th:block>
     </form>
