--- a/src/main/resources/public/template/cmdb/class/classAttributeList.html
+++ b/src/main/resources/public/template/cmdb/class/classAttributeList.html
@@ -26,10 +26,10 @@
                 <span></span>
             </label>
         </td>
-        <td style="width: 25%;" class="align-left" th:text="${attribute.attributeName}"></td>
-        <td style="width: 15%;" class="align-center" th:text="${attribute.attributeText}"></td>
-        <td style="width: 15%;" class="align-center" th:text="${attribute.attributeType}"></td>
-        <td style="width: 40%;" class="align-left" th:text="${attribute.attributeDesc}"></td>
+        <td style="width: 25%;" class="align-left" th:text="${attribute.attributeName}" th:title="${attribute.attributeName}"></td>
+        <td style="width: 15%;" class="align-center" th:text="${attribute.attributeText}" th:title="${attribute.attributeText}"></td>
+        <td style="width: 15%;" class="align-center" th:text="${attribute.attributeType}" th:title="${attribute.attributeType}"></td>
+        <td style="width: 40%;" class="align-left" th:text="${attribute.attributeDesc}" th:title="${attribute.attributeDesc}"></td>
     </tr>
     </tbody>
 </table>
