--- a/src/main/resources/public/template/login.html
+++ b/src/main/resources/public/template/login.html
@@ -34,9 +34,9 @@
             </form>
             <div class="login-base-form flex-column">
                 <label th:text="#{user.label.id}"></label>
-                <input type="text" id="uid" name="uid" class="z-input" maxlength="100" required="required">
+                <input type="text" id="uid" name="uid" class="z-input text-ellipsis" maxlength="100" required="required">
                 <label tabindex="-1" th:text="#{user.label.password}"></label>
-                <input type="password" id="upasswd" name="upasswd" class="z-input" maxlength="100" required="required">
+                <input type="password" id="upasswd" name="upasswd" class="z-input text-ellipsis" maxlength="100" required="required">
             </div>
             <button class="z-button primary col-pct-12" id="sendLogin" th:text="#{login.btn.login}" onclick="onLogin()"></button>
         </div>
@@ -131,11 +131,11 @@
             `<label> ${i18n.msg('user.msg.updatePasswordNotice', passwordExpiredPeriod)}</label>` +
             `<label> ${i18n.msg('user.tooltip.pwRuleSummary')}</label>` +
             `<label>${i18n.msg('user.label.nowUserPassword')} </label>` +
-            `<input type="password" id="nowPassword" class="z-input" maxlength="20" required="required">` +
+            `<input type="password" id="nowPassword" class="z-input text-ellipsis" maxlength="20" required="required">` +
             `<label>${i18n.msg('user.label.newUserPassword')} </label>` +
-            `<input type="password" id="newPassword" class="z-input" maxlength="20" required="required">` +
+            `<input type="password" id="newPassword" class="z-input text-ellipsis" maxlength="20" required="required">` +
             `<label>${i18n.msg('user.label.newUserRePassword')} </label>` +
-            `<input type="password" id="newRePassword" class="z-input" maxlength="20" required="required">` +
+            `<input type="password" id="newRePassword" class="z-input text-ellipsis" maxlength="20" required="required">` +
             '</div>'
     }
 
