--- a/src/main/resources/public/template/notice/noticePopUp.html
+++ b/src/main/resources/public/template/notice/noticePopUp.html
@@ -11,7 +11,7 @@
     <form id="frm" method="post">
         <div class="notice-content-popup view">
             <div class="flex-column view-row">
-                <div class="view-title text-ellipsis" th:text="${noticePopUp?.noticeTitle}"></div>
+                <div class="view-title text-ellipsis" th:text="${noticePopUp?.noticeTitle}" th:title="${noticePopUp?.noticeTitle}"></div>
             </div>
             <div class="flex-column view-row">
                 <div class="flex-row justify-content-end">
