--- a/src/main/resources/public/template/numbering-rule/numberingRuleList.html
+++ b/src/main/resources/public/template/numbering-rule/numberingRuleList.html
@@ -18,13 +18,13 @@
     <tr class="flex-row align-items-center" th:each="rule : ${ruleList}">
         <td style="width:30%;" class="align-left underline" th:id="${rule.numberingId}">
             <a sec:authorize="!hasAuthority('numbering.rule.update')" th:text="${rule.numberingName}"
-               th:href="@{/numberingRules/{id}/view(id=${rule.numberingId})}"></a>
+               th:href="@{/numberingRules/{id}/view(id=${rule.numberingId})}" th:title="${rule.numberingName}"></a>
             <a sec:authorize="hasAuthority('numbering.rule.update')" th:text="${rule.numberingName}"
-               th:href="@{/numberingRules/{id}/edit(id=${rule.numberingId})}"></a>
+               th:href="@{/numberingRules/{id}/edit(id=${rule.numberingId})}" th:title="${rule.numberingName}"></a>
         </td>
-        <td style="width:30%;" class="align-left" id="ruleDesc" th:text="${rule.numberingDesc}"></td>
-        <td style="width:20%;" class="align-left" id="ruleLatestValue" th:text="${rule.latestValue}"></td>
-        <td style="width:20%;" class="align-left date-time" id="ruleLatestDate" th:text="${rule.latestDate}"></td>
+        <td style="width:30%;" class="align-left" id="ruleDesc" th:text="${rule.numberingDesc}" th:title="${rule.numberingDesc}"></td>
+        <td style="width:20%;" class="align-left" id="ruleLatestValue" th:text="${rule.latestValue}" th:title="${rule.latestValue}"></td>
+        <td style="width:20%;" class="align-left date-time" id="ruleLatestDate" th:text="${rule.latestDate}" th:title="${rule.latestDate}"></td>
     </tr>
     </tbody>
 </table>
