--- a/src/main/resources/public/template/process/processList.html
+++ b/src/main/resources/public/template/process/processList.html
@@ -25,14 +25,14 @@
             <td style="width: 20%" class="align-left underline">
                 <th:block th:if="${process.enabled == true}">
                     <a sec:authorize="!hasAuthority('process.update')" th:text="${process.name}"
-                       th:attr="onclick=|openProcessEdit('${process.id}', true)|"></a>
+                       th:attr="onclick=|openProcessEdit('${process.id}', true)|" th:title="${process.name}"></a>
                     <a sec:authorize="hasAuthority('process.update')" th:text="${process.name}"
-                       th:attr="onclick=|openProcessEdit('${process.id}', false)|"></a>
+                       th:attr="onclick=|openProcessEdit('${process.id}', false)|" th:title="${process.name}"></a>
                 </th:block>
                 <div th:unless="${process.enabled == true}">
                     <a th:if="${process.status == 'process.status.use'}" th:text="${process.name}"
-                       th:attr="onclick=|openProcessEdit('${process.id}', true)|"></a>
-                    <span th:unless="${process.status == 'process.status.use'}" th:text="${process.name}"></span>
+                       th:attr="onclick=|openProcessEdit('${process.id}', true)|" th:title="${process.name}"></a>
+                    <span th:unless="${process.status == 'process.status.use'}" th:text="${process.name}" th:title="${process.name}"></span>
                 </div>
             </td>
             <td style="width: 10%" class="align-center">
@@ -48,10 +48,10 @@
                     </button>
                 </th:block>
             </td>
-            <td style="width: 10%" class="align-center" th:text="#{${process.status}}"></td>
-            <td style="width: 28%" class="align-left" th:text="${process.description}"></td>
-            <td style="width: 10%" class="align-left" th:text="${process.createUserName}"></td>
-            <td style="width: 12%" class="align-left date-time" th:text="${process.createDt}"></td>
+            <td style="width: 10%" class="align-center" th:text="#{${process.status}}" th:title="${process.status}"></td>
+            <td style="width: 28%" class="align-left" th:text="${process.description}" th:title="${process.description}"></td>
+            <td style="width: 10%" class="align-left" th:text="${process.createUserName}" th:title="${process.createUserName}"></td>
+            <td style="width: 12%" class="align-left date-time" th:text="${process.createDt}" th:title="${process.createDt}"></td>
         </tr>
     </tbody>
 </table>
