--- a/src/main/resources/public/template/process/processSearch.html
+++ b/src/main/resources/public/template/process/processSearch.html
@@ -18,7 +18,7 @@
 <div layout:fragment="pageSearching">
     <input type="hidden" id="updatable" th:value="${#authorization.expression('hasAuthority(''process.update'')')}"/>
     <form id="searchFrm">
-        <input type="text" id="searchValue" name="searchValue" class="z-input i-search col-5 mr-2"  maxlength="100"
+        <input type="text" id="searchValue" name="searchValue" class="z-input i-search text-ellipsis col-5 mr-2"  maxlength="100"
                th:placeholder="#{process.label.searchPlaceholder}"/>
         <th:block th:replace="layout/itsm/fragment/totalCountFragment :: totalCountFragment"></th:block>
     </form>
@@ -467,7 +467,9 @@
      */
     function setDateTimeFormat(elem) {
         elem.querySelectorAll('.date-time').forEach(dt => {
-            dt.textContent = i18n.userDateTime(dt.textContent.trim());
+            const userDateTime = i18n.userDateTime(dt.textContent.trim());
+            dt.textContent = userDateTime;
+            dt.setAttribute('title', userDateTime);
         });
     }
 </script>
