--- a/src/main/resources/public/template/report/reportTemplate.html
+++ b/src/main/resources/public/template/report/reportTemplate.html
@@ -21,7 +21,7 @@
                 <span th:text="#{report.label.templateName}"></span>
                 <span class="required"></span>
             </label>
-            <input type="text" id="templateName" class="z-input" required="true" maxlength="100"
+            <input type="text" id="templateName" class="z-input text-ellipsis" required="true" maxlength="100"
                    th:attr="data-validation-required-name=#{report.label.templateName}"
                    th:value="${template?.templateName}" th:readonly="${view}"/>
         </div>
@@ -42,7 +42,7 @@
                     </div>
                 </div>
             </label>
-            <input type="text" id="reportName" class="z-input" maxlength="100"
+            <input type="text" id="reportName" class="z-input text-ellipsis" maxlength="100"
                    th:value="${template?.reportName}" th:readonly="${view}"/>
         </div>
         <div class="flex-column z-edit-row">
