--- a/src/main/resources/public/template/role/roleSearch.html
+++ b/src/main/resources/public/template/role/roleSearch.html
@@ -12,7 +12,7 @@
     <h6 class="description ml-2 pl-2" th:text="#{role.msg.editDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
-    <input type="text" class="z-input i-search col-5 mr-2" id="searchValue" name="searchValue" maxlength="100" th:placeholder="#{role.msg.searchPlaceholder}"/>
+    <input type="text" class="z-input i-search text-ellipsis col-5 mr-2" id="searchValue" name="searchValue" maxlength="100" th:placeholder="#{role.msg.searchPlaceholder}"/>
     <th:block th:replace="layout/itsm/fragment/totalCountFragment :: totalCountFragment"></th:block>
     <div class="ml-auto">
         <button type="button" class="z-button primary" id="btnAdd" name="btnAdd" onclick="location.href='/roles/new'"
