--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -24,7 +24,7 @@
             <option th:each="document: ${documentList}" th:value="${document.documentId}"
                     th:text="${document.documentName}"></option>
         </select>
-        <input class="z-input i-search col-3" type="text" name="searchValue" id="searchValue"
+        <input class="z-input text-ellipsis i-search col-3" type="text" name="searchValue" id="searchValue"
                maxlength="100" th:placeholder="#{token.label.searchPlaceholder}"/>
         <input type="text" class="z-input i-date-picker search-date col-3" id="searchFromDt" name="searchFromDt"/>
         <input type="text" class="z-input i-date-picker search-date col-3" id="toDt" name="toDt"/>
