--- a/src/main/resources/public/template/user/user.html
+++ b/src/main/resources/public/template/user/user.html
@@ -32,7 +32,7 @@
                         <label for="userId">
                             <span th:classappend="${view} ? '':'required'" th:text="#{user.label.id}"></span>
                         </label>
-                        <input class="z-input" id="userId" maxlength="100" name="userId" th:readonly="${view}"
+                        <input class="z-input text-ellipsis" id="userId" maxlength="100" name="userId" th:readonly="${view}"
                                th:required="!${view}" th:value="${users?.userId}" type="text" />
                     </div>
                     <div class="flex-column z-edit-row"
@@ -45,19 +45,19 @@
                         <label for="userName">
                             <span th:classappend="${view} ? '':'required'" th:text="#{user.label.name}"></span>
                         </label>
-                        <input class="z-input" id="userName" maxlength="100" name="userName" th:readonly="${view}"
+                        <input class="z-input text-ellipsis" id="userName" maxlength="100" name="userName" th:readonly="${view}"
                                th:required="!${view}" th:value="${users?.userName}" type="text" />
                     </div>
                     <div class="flex-column z-edit-row">
                         <label for="email">
                             <span th:classappend="${view} ? '':'required'" th:text="#{user.label.email}"></span>
                         </label>
-                        <input class="z-input" id="email" maxlength="100" name="email" th:readonly="${view}"
+                        <input class="z-input text-ellipsis" id="email" maxlength="100" name="email" th:readonly="${view}"
                                th:required="!${view}" th:value="${users?.email}" type="text" />
                     </div>
                     <div class="flex-column z-edit-row">
                         <label for="position" th:text="#{user.label.position}"></label>
-                        <input class="z-input" id="position" maxlength="100" name="position" th:readonly="${view}"
+                        <input class="z-input text-ellipsis" id="position" maxlength="100" name="position" th:readonly="${view}"
                                th:value="${users?.position}" type="text" >
                     </div>
                     <div class="flex-column z-edit-row">
@@ -65,7 +65,7 @@
                         <div class="flex-row z-input-button">
                             <input id="departmentCode" name="departmentCode" th:value="${deptCodeDetail?.code}"
                                    type="hidden"/>
-                            <input class="z-input" id="department" name="department" readonly
+                            <input class="z-input text-ellipsis" id="department" name="department" readonly
                                    th:value="${deptCodeDetail?.codeValue}" type="text">
                             <span class="z-icon i-clear" name="clearIcon" onclick="aliceJs.clearText(this);"
                                   tabindex="-1" th:if="!${view}"></span>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="flex-column z-edit-row">
                         <label for="mobileNumber" th:text="#{user.label.mobileNumber}"></label>
-                        <input class="z-input" id="mobileNumber" maxlength="100" name="mobileNumber"
+                        <input class="z-input text-ellipsis" id="mobileNumber" maxlength="100" name="mobileNumber"
                                th:onkeydown="${view} ? '' : 'return onlyNumber(event)'" th:onkeyup="${view} ? '' : 'aliceJs.removeChar(event)'"
                                th:readonly="${view}" th:value="${users?.mobileNumber}" type="text">
                     </div>
