--- a/src/main/resources/public/template/user/userSearch.html
+++ b/src/main/resources/public/template/user/userSearch.html
@@ -12,7 +12,7 @@
     <h6 class="description ml-2 pl-2" th:text="#{user.msg.searchDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
-    <input class="z-input i-search col-5 mr-2 pl-2" id="searchValue" type="text" maxlength="100"
+    <input class="z-input i-search text-ellipsis col-5 mr-2 pl-2" id="searchValue" type="text" maxlength="100"
            th:placeholder="#{user.label.searchPlaceholder}"/>
     <th:block th:replace="layout/itsm/fragment/totalCountFragment :: totalCountFragment"></th:block>
     <div class="ml-auto">
@@ -61,7 +61,9 @@
      */
     function setDateTimeFormat(elem) {
         elem.querySelectorAll('.date-time').forEach(dt => {
-            dt.textContent = i18n.userDateTime(dt.textContent.trim());
+            const userDateFormat = i18n.userDateTime(dt.textContent.trim());
+            dt.textContent = userDateFormat;
+            dt.setAttribute('title', userDateFormat);
         });
     }
     /*]]>*/
