--- a/src/main/resources/public/template/workflow/workFlowList.html
+++ b/src/main/resources/public/template/workflow/workFlowList.html
@@ -24,19 +24,19 @@
         <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(documentList)}" th:each="document: ${documentList}">
             <td width="25%" class="align-left">
                 <div class="document-color-circle" th:style="|background-color:${document.documentColor}|"></div>
-                <span th:text="${document.documentName}"></span>
+                <span th:text="${document.documentName}" title="${document.documentName}"></span>
             </td>
-            <td style="width: 10%;" class="align-left" th:if="${document.documentType} == 'application-form'" th:text="#{document.type.applicationForm}"></td>
-            <td style="width: 10%;" class="align-left" th:unless="${document.documentType} == 'application-form'" th:text="#{document.type.workflow}"></td>
+            <td style="width: 10%;" class="align-left" th:if="${document.documentType} == 'application-form'" th:text="#{document.type.applicationForm}" th:title="#{document.type.applicationForm}"></td>
+            <td style="width: 10%;" class="align-left" th:unless="${document.documentType} == 'application-form'" th:text="#{document.type.workflow}" th:title="#{document.type.workflow}"></td>
             <td style="width: 15%;" class="align-left">
                 <th:block th:if="${document.documentGroup != null && document.documentGroup != ''}">
                     <th:block th:each="group, index : ${groupList}">
-                        <label th:if="${group.code} == ${document.documentGroup}" th:text="${group.codeValue}"></label>
+                        <label th:if="${group.code} == ${document.documentGroup}" th:text="${group.codeValue}" th:title="${group.codeValue}"></label>
                     </th:block>
                 </th:block>
             </td>
-            <td style="width: 20%;" class="align-left" th:text="${document.documentDesc}"></td>
-            <td style="width: 10%;" class="align-center" th:text="#{${document.documentStatus}}"></td>
+            <td style="width: 20%;" class="align-left" th:text="${document.documentDesc}" th:title="${document.documentDesc}"></td>
+            <td style="width: 10%;" class="align-center" th:text="#{${document.documentStatus}}" th:title="#{${document.documentStatus}}"></td>
             <td style="width: 10%;" class="align-center">
                 <button type="button" class="z-button-icon form" sec:authorize="hasAuthority('document.admin.update')" th:onclick="openDocumentEdit([[${document.documentId}]])">
                     <span class="z-icon i-edit"></span>
